--- a/litreview.bib
+++ b/litreview.bib
@@ -907,3 +907,13 @@
     year = {2011},
     pages = {12--27},
 }
+
+
+@misc{neubauer_2010, title={Graph Databases, NOSQL and Neo4j}, url={https://www.infoq.com/articles/graph-nosql-neo4j}, journal={InfoQ}, author={Neubauer , Peter}, year={2010}, month={May}} 
+
+@article{montag2013understanding,
+    title={Understanding neo4j scalability},
+    author={Montag, David},
+    journal={White Paper, Neotechnology},
+    year={2013}
+}
