--- a/litreview.bib
+++ b/litreview.bib
@@ -917,3 +917,17 @@
     journal={White Paper, Neotechnology},
     year={2013}
 }
+
+
+@inproceedings{hecht_nosql_2011,
+    title = {{NoSQL} evaluation: {A} use case oriented survey},
+    shorttitle = {{NoSQL} evaluation},
+    url = {http://ieeexplore.ieee.org/abstract/document/6138544/},
+    urldate = {2017-02-02},
+    booktitle = {Cloud and {Service} {Computing} ({CSC}), 2011 {International} {Conference} on},
+    publisher = {IEEE},
+    author = {Hecht, Robin and Jablonski, Stefan},
+    year = {2011},
+    pages = {336--341},
+    file = {DatabaseSystemsPaper.pdf:C\:\\Users\\Anthony\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\i82i63jy.default\\zotero\\storage\\2HZC698J\\DatabaseSystemsPaper.pdf:application/pdf}
+}
