--- a/litreview.tex
+++ b/litreview.tex
@@ -639,6 +639,14 @@ Spanner is able to provide absolute timestamps on a global scale by making use o
 
 \subsection{Apache Spark}
 
+\subsection{GraphX}
+
+\subsection{Dryad}
+
+\subsection{Shark}
+
+\subsection{Pregel}
+
 \section{Conclusion}
 
 \bibliography{litreview}
