--- a/litreview.bib
+++ b/litreview.bib
@@ -931,3 +931,14 @@
     pages = {336--341},
     file = {DatabaseSystemsPaper.pdf:C\:\\Users\\Anthony\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\i82i63jy.default\\zotero\\storage\\2HZC698J\\DatabaseSystemsPaper.pdf:application/pdf}
 }
+
+@article{dean2008mapreduce,
+    title={MapReduce: simplified data processing on large clusters},
+    author={Dean, Jeffrey and Ghemawat, Sanjay},
+    journal={Communications of the ACM},
+    volume={51},
+    number={1},
+    pages={107--113},
+    year={2008},
+    publisher={ACM}
+}
