--- a/litreview.bib
+++ b/litreview.bib
@@ -942,3 +942,92 @@
     year={2008},
     publisher={ACM}
 }
+
+@article{pike2005interpreting,
+    title={Interpreting the data: Parallel analysis with Sawzall},
+    author={Pike, Rob and Dorward, Sean and Griesemer, Robert and Quinlan, Sean},
+    journal={Scientific Programming},
+    volume={13},
+    number={4},
+    pages={277--298},
+    year={2005},
+    publisher={Hindawi Publishing Corporation}
+}
+
+@inproceedings{olston2008pig,
+    title={Pig latin: a not-so-foreign language for data processing},
+    author={Olston, Christopher and Reed, Benjamin and Srivastava, Utkarsh and Kumar, Ravi and Tomkins, Andrew},
+    booktitle={Proceedings of the 2008 ACM SIGMOD international conference on Management of data},
+    pages={1099--1110},
+    year={2008},
+    organization={ACM}
+}
+
+@article{thusoo2009hive,
+    title={Hive: a warehousing solution over a map-reduce framework},
+    author={Thusoo, Ashish and Sarma, Joydeep Sen and Jain, Namit and Shao, Zheng and Chakka, Prasad and Anthony, Suresh and Liu, Hao and Wyckoff, Pete and Murthy, Raghotham},
+    journal={Proceedings of the VLDB Endowment},
+    volume={2},
+    number={2},
+    pages={1626--1629},
+    year={2009},
+    publisher={VLDB Endowment}
+}
+
+@inproceedings{rabkin2010chukwa,
+    title={Chukwa: A System for Reliable Large-Scale Log Collection.},
+    author={Rabkin, Ariel and Katz, Randy H},
+    booktitle={LISA},
+    volume={10},
+    pages={1--15},
+    year={2010}
+}
+
+@article{owen2012mahout,
+    title={Mahout in action},
+    author={Owen, Sean and Owen, Sean},
+    year={2012},
+    publisher={Manning Shelter Island, NY}
+}
+
+@inproceedings{ekanayake2010twister,
+    title={Twister: a runtime for iterative mapreduce},
+    author={Ekanayake, Jaliya and Li, Hui and Zhang, Bingjing and Gunarathne, Thilina and Bae, Seung-Hee and Qiu, Judy and Fox, Geoffrey},
+    booktitle={Proceedings of the 19th ACM international symposium on high performance distributed computing},
+    pages={810--818},
+    year={2010},
+    organization={ACM}
+}
+
+@inproceedings{vavilapalli2013apache,
+    title={Apache hadoop yarn: Yet another resource negotiator},
+    author={Vavilapalli, Vinod Kumar and Murthy, Arun C and Douglas, Chris and Agarwal, Sharad and Konar, Mahadev and Evans, Robert and Graves, Thomas and Lowe, Jason and Shah, Hitesh and Seth, Siddharth and others},
+    booktitle={Proceedings of the 4th annual Symposium on Cloud Computing},
+    pages={5},
+    year={2013},
+    organization={ACM}
+}
+
+
+@inproceedings{malewicz_pregel:_2010,
+    title = {Pregel: a system for large-scale graph processing},
+    shorttitle = {Pregel},
+    url = {http://dl.acm.org/citation.cfm?id=1807184},
+    urldate = {2014-11-09},
+    booktitle = {Proceedings of the 2010 {ACM} {SIGMOD} {International} {Conference} on {Management} of data},
+    publisher = {ACM},
+    author = {Malewicz, Grzegorz and Austern, Matthew H. and Bik, Aart JC and Dehnert, James C. and Horn, Ilan and Leiser, Naty and Czajkowski, Grzegorz},
+    year = {2010},
+    pages = {135--146},
+}
+
+@inproceedings{isard2007dryad,
+    title={Dryad: distributed data-parallel programs from sequential building blocks},
+    author={Isard, Michael and Budiu, Mihai and Yu, Yuan and Birrell, Andrew and Fetterly, Dennis},
+    booktitle={ACM SIGOPS operating systems review},
+    volume={41},
+    number={3},
+    pages={59--72},
+    year={2007},
+    organization={ACM}
+}
