--- a/litreview.bib
+++ b/litreview.bib
@@ -1031,3 +1031,20 @@
     year={2007},
     organization={ACM}
 }
+
+@inproceedings{saha2015apache,
+    title={Apache tez: A unifying framework for modeling and building data processing applications},
+    author={Saha, Bikas and Shah, Hitesh and Seth, Siddharth and Vijayaraghavan, Gopal and Murthy, Arun and Curino, Carlo},
+    booktitle={Proceedings of the 2015 ACM SIGMOD international conference on Management of Data},
+    pages={1357--1369},
+    year={2015},
+    organization={ACM}
+}
+
+@article{carbone2015apache,
+    title={Apache flink: Stream and batch processing in a single engine},
+    author={Carbone, Paris and Ewen, Stephan and Haridi, Seif and Katsifodimos, Asterios and Markl, Volker and Tzoumas, Kostas},
+    journal={Data Engineering},
+    pages={28},
+    year={2015}
+}
