--- a/litreview.bib
+++ b/litreview.bib
@@ -1048,3 +1048,19 @@
     pages={28},
     year={2015}
 }
+
+@book{white2012hadoop,
+    title={Hadoop: The definitive guide},
+    author={White, Tom},
+    year={2012},
+    publisher={" O'Reilly Media, Inc."}
+}
+
+@inproceedings{vavilapalli2013apache,
+    title={Apache hadoop yarn: Yet another resource negotiator},
+    author={Vavilapalli, Vinod Kumar and Murthy, Arun C and Douglas, Chris and Agarwal, Sharad and Konar, Mahadev and Evans, Robert and Graves, Thomas and Lowe, Jason and Shah, Hitesh and Seth, Siddharth and others},
+    booktitle={Proceedings of the 4th annual Symposium on Cloud Computing},
+    pages={5},
+    year={2013},
+    organization={ACM}
+}
